# sgx-ipfs

./: .gitignore  Cargo.toml  Makefile  README.md  Taskfile  rust-toolchain
app/: Cargo.toml  build.rs
app/src/: main.rs
enclave/: Cargo.toml  Enclave.config.xml  Enclave.edl  Makefile
enclave/src/: lib.rs
scripts/: setup.sh
