[workspace]
members = [
    "app",
    "enclave",
]
exclude = [
	"rust-sgx-sdk",
]


[patch."https://github.com/apache/teaclave-sgx-sdk.git"]
sgx_tstd = { version = "1.1.4", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "master"}
sgx_alloc = { version = "1.1.4", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "master"}
sgx_libc = { version = "1.1.4", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "master"}
# sgx_serialize = { version = "1.1.4", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "master"}
# sgx_serialize_derive = { version = "1.1.4", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "master"}
# sgx_serialize_derive_internals = { version = "1.1.4", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "master"}
sgx_trts = { version = "1.1.4", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "master"}
sgx_types = { version = "1.1.4", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "master"}
# sgx_ucrypto = { version = "1.1.4", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "master"}
# sgx_tcrypto = { version = "1.1.4", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "master"}
# sgx_tcrypto_helper = { version = "1.1.4", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "master"}
# sgx_crypto_helper = { version = "1.1.4", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "master"}
