[package]
name = "ipfsenclave"
version = "0.1.0"

[lib]
name = "ipfsenclave"
crate-type = ["staticlib"]


[features]
default = []

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = { version = "1.1.4", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd = { version = "1.1.4", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["net", "backtrace"] }
sgx_trts = { version = "1.1.4", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
